--- a/eTickets/Views/Shared/_CreateItem.cshtml
+++ b/eTickets/Views/Shared/_CreateItem.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string;
 @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
 {
-    <div style="position:fixed; right:25px; bottom:25px;" class="text-white">
+    <div style="position:fixed; right:25px; bottom:25px; z-index: 10000;" class="text-white">
         <a asp-controller="@Model" asp-action="Create" class="btn btn-success">
             <i class="bi bi-plus-circle"></i>Add new
         </a>
